<resources>
    <string name="app_name">GMB Planner</string>
    <string name="tab_mine">Yours</string>
    <string name="tab_all">Changes</string>
    <string name="tab_tasks">Tasks</string>
    <string name="tab_grades">Grades</string>
    <string name="nocontent_mine">👨‍🏫\nYour schedule seems to be regular</string>
    <string name="nocontent_mine_nocourses">➕\nAdd your own courses to see them here</string>
    <string name="nocontent_all">✔️\nNo irregularities found</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="remove">Remove</string>
    <string name="not_now">Not now</string>
    <string name="menu_option_credentials">Change credentials</string>
    <string name="menu_option_courses">Change your courses</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_information">Information</string>
    <string name="menu_manage_account">Edit your account</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_darkmode_enable">Dark theme</string>
    <string name="menu_darkmode_disable">Light theme</string>
    <string name="option_darkmode">Dark theme</string>
    <string name="option_background_update">Background update (higher data usage)</string>
    <string name="option_theme_dark">Dark theme</string>
    <string name="option_theme_light">Light theme</string>
    <string name="option_compact_off">Comfortable</string>
    <string name="option_compact_auto">Auto</string>
    <string name="option_compact_on">Compact</string>
    <string name="option_background_on">Background update</string>
    <string name="option_background_off">Save data</string>
    <string name="action_email">Send email</string>
    <string name="action_favorites_add">Add to your plan</string>
    <string name="action_favorites_remove">Remove from your plan</string>
    <string name="action_share">Share</string>
    <string name="start_credentials_explanation"><![CDATA[Hey there!<br>To use this app, you need an account with the school Gymnasium am Mosbacher Berg.<br>Please enter your credentials or <a href="https://sv.gmbwi.de/ovp">create an account using your activation code</a>.]]></string>
    <string name="credentials_invalidated">Whoops!\nYour credentials don\'t seem to be working. Please enter them again.</string>
    <string name="credentials_password_info">Your password will only be saved locally</string>
    <string name="credentials_redeem_code_prompt">Please redeem your access code first</string>
    <string name="start_add_courses">Add your courses</string>
    <string name="setup_prompt">Complete setup?</string>
    <string name="setup_action">Choose courses</string>
    <string-array name="loading_facts">
        <item>There is a teacher for every 12 students at Mosbacher Berg.</item>
        <item>Mosbacher Berg was founded on August 1st, 1969.</item>
        <item>When Mosbacher Berg was founded, students had to go to school on saturdays.</item>
        <item>On the site of today\'s Mosbacher Berg, there was once the Diltheyschule.</item>
        <item>Some students have classes until 6pm.</item>
        <item>Mosbacher Berg\'s campus contains about 100 rooms.</item>
        <item>The student reps\' office is in B120.</item>
    </string-array>
    <string name="credentials_name">Username or email</string>
    <string name="credentials_pass">Password</string>
    <string name="courses_add">Find or add a course</string>
    <string name="course_chip">%course (%teacher)</string>
    <string name="courses_add_more">More courses</string>
    <string name="courses_edit_timetable">Edit timetable</string>
    <string name="courses_edit_courses">Edit courses</string>
    <string name="courses_edit_timetable_help">Tap to add or remove a course</string>
    <string name="change_hours">h</string>
    <string name="change_workorders">" Note work orders"</string>
    <string name="change_exam">Exam</string>
    <string name="change_connect_teacher">" with "</string>
    <string name="change_connect_room">" in "</string>
    <string name="change_connect_date">" on "</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="aftertomorrow">Day after tomorrow</string>
    <string name="timetable">Your timetable</string>
    <string name="timetable_today">Today: </string>
    <string name="timetable_expand_description">Toggle timetable</string>
    <string name="expand_description">Expand / Minify</string>
    <string name="next_changes">Next changes</string>
    <string name="lesson_room">In room %room</string>
    <string name="change_type_cancelled">" cancelled"</string>
    <string name="grade_add">Add grade</string>
    <string name="grade_type_exam">Exam</string>
    <string name="grade_type_participation">Participation</string>
    <string name="grade_type_participation_partial">Partial participation</string>
    <string name="grade_type_other">Other</string>
    <string name="grade_name">Name</string>
    <string name="grade_grade">Grade</string>
    <string-array name="grade_types">
        <item>Exam</item>
        <item>Participation</item>
        <item>Partial participation</item>
        <item>Other</item>
    </string-array>
    <string name="grade_error">Please check your input</string>
    <string name="feedback_subject">[GMB Planner] Feedback</string>
    <string name="feedback_body">\n\nApp version: %app\nAndroid version: %android</string>
    <string name="error_nomailclient">No email client installed</string>
    <string name="error_offline">You\'re currently offline</string>
    <string name="url_presets" translatable="false">https://koenidv.de/gmbplanner/courses2_%grade.json</string>
    <string name="url_timetable" translatable="false">https://koenidv.de/gmbplanner/timetable_%grade.json</string>
    <string name="widget_title">Your changes:</string>
    <string name="widget_nodata">Currently no changes</string>
    <string name="update_downloaded">Update downloaded</string>
    <string name="update_complete">Complete</string>
    <string name="last_refreshed">Last refresh: %refresh\nLast change: %change\nCourses refreshed: %courses</string>
    <string name="last_refreshed_shortly">Recently updated</string>
    <string name="last_refreshed_hourly">Updated within the last hour</string>
    <string name="last_refreshed_other">Updated a while ago</string>
    <string name="dateformat_hours">HH:mm:ss</string>
    <string name="dateformat_coursesrefreshed">d. MMM</string>
    <string name="info_greeting">Hey %name</string>
    <string name="info_app">GMB Planner %version</string>
    <string name="info_author">Florian König 2020</string>
    <string name="info_thanks">Thanks to Mosbacher Berg and the student reps from 2015 until today for making changes available online, to Ryan for doing some of the annoying work, and to my physics ic for beta testing.</string>
    <string name="info_github">View source code on GitHub</string>
    <string name="notification_channel_name">Changes</string>
    <string name="notification_channel_description">This will notify you when a new change is made public. </string>
    <string name="notification_channel_firebase_name">Current events</string>
    <string name="notification_channel_firebase_description">You will get a notification when someting import is happening. </string>
    <plurals name="notification_title">
        <item quantity="one">New change</item>
        <item quantity="other">New changes</item>
    </plurals>
    <string name="course_german">German</string>
    <string name="course_english">English</string>
    <string name="course_latin">Latin</string>
    <string name="course_french">French</string>
    <string name="course_history">History</string>
    <string name="course_it">IT</string>
    <string name="course_arts">Arts</string>
    <string name="course_music">Music</string>
    <string name="course_maths">Maths</string>
    <string name="course_physics">Physics</string>
    <string name="course_biology">Biology</string>
    <string name="course_chemistry">Chemistry</string>
    <string name="course_geography">Geography</string>
    <string name="course_politics">Politics</string>
    <string name="course_sports">Sports</string>
    <string name="course_religion">Religion</string>
    <string name="course_religion_catholic">Catholic</string>
    <string name="course_religion_protestant">Protestant</string>
    <string name="course_ethics">Ethics</string>
    <string name="course_history_bili">History Bili</string>
    <string name="course_concb">Concert Band</string>
    <string name="course_mug">Museum guides</string>
    <string name="course_korean">Korean</string>
    <string name="course_sustain">Sustainability</string>
    <string name="course_intensified">" IC"</string>
    <string name="course_examination">" ES"</string>
    <string name="course_german_short">Ger</string>
    <string name="course_english_short">Eng</string>
    <string name="course_latin_short">Lat</string>
    <string name="course_french_short">Fre</string>
    <string name="course_history_short">His</string>
    <string name="course_it_short">IT</string>
    <string name="course_arts_short">Art</string>
    <string name="course_music_short">Mus</string>
    <string name="course_maths_short">Mat</string>
    <string name="course_physics_short">Phy</string>
    <string name="course_biology_short">Bio</string>
    <string name="course_chemistry_short">Che</string>
    <string name="course_geography_short">Geo</string>
    <string name="course_politics_short">Pol</string>
    <string name="course_sports_short">Spo</string>
    <string name="course_religion_short">Rel</string>
    <string name="course_ethics_short">Eth</string>
    <string name="course_history_bili_short">His</string>
    <string name="course_concb_short">Con</string>
    <string name="course_mug_short">MuG</string>
    <string name="course_korean_short">Kor</string>
    <string name="course_sustain_short">Sus</string>
    <string name="course_intensified_short" translatable="false" />
    <string name="course_examination_short" translatable="false" />
    <string name="corona_disclaimer" translatable="false">Aktuell können auf dem Vertretungsplan Unstimmigkeiten auftreten</string>
    <string name="corona_title" translatable="false">Aufgrund der aktuellen Situation wurden einige Kurse neu verteilt. Bitte wähle diese Kurse noch einmal aus.</string>
    <string name="corona_select_courses" translatable="false">Kurse auswählen</string>
    <string name="corona_title_english" translatable="false">Englisch</string>
    <string name="corona_course_e1" translatable="false">Fr. Klie</string>
    <string name="corona_course_e2" translatable="false">Fr. Hinkel</string>
    <string name="corona_course_e3" translatable="false">Fr. Ascheidt</string>
    <string name="corona_title_politics" translatable="false">PoWi</string>
    <string name="corona_course_powi1" translatable="false">Hr. Esslinger (Mo/Do)</string>
    <string name="corona_course_powi2" translatable="false">Hr. Esslinger (Mo/Fr)</string>
    <string name="corona_course_powi3" translatable="false">Ker</string>
    <string name="corona_course_powi4" translatable="false">Hr. Piniek</string>
    <string name="corona_title_physics" translatable="false">Physik</string>
    <string name="corona_course_ph1" translatable="false">Hr. Nicolay</string>
    <string name="corona_course_ph2" translatable="false">Hr. Makridis</string>
    <string name="corona_title_biology" translatable="false">Bio</string>
    <string name="corona_course_bio1" translatable="false">Hr. Pausch</string>
    <string name="corona_course_bio2" translatable="false">Fr. Wangen</string>
    <string name="corona_title_chemistry" translatable="false">Chemie</string>
</resources>