<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refreshItem"
        android:title="@string/menu_refresh" />
    <item
        android:id="@+id/changeCoursesItem"
        android:title="@string/menu_option_courses" />
    <item
        android:id="@+id/changeAuthorizationItem"
        android:title="@string/menu_option_credentials" />
    <item
        android:id="@+id/darkmodeItem"
        android:title="@string/menu_darkmode_enable"
        android:visible="false"
        app:actionLayout="@layout/switch_item" />
    <item
        android:id="@+id/manageAccountItem"
        android:title="@string/menu_manage_account"
        android:visible="false" />
    <item
        android:id="@+id/feedbackItem"
        android:title="@string/menu_feedback"
        android:visible="false" />
    <item
        android:id="@+id/informationItem"
        android:title="@string/menu_information" />
</menu>