<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/authorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/info_author"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/expandButton"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="@drawable/transparent"
                android:clickable="false"
                android:contentDescription="@string/expand_description"
                android:focusable="false"
                android:src="@drawable/ic_more"
                android:tint="@color/titleText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/expandLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_thanks" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/githubButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/more_options" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/darkmodeToggleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:selectionRequired="true"
                app:singleSelection="true"
                tools:visibility="visible">

                <Button
                    android:id="@+id/darkButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/option_theme_dark" />

                <Button
                    android:id="@+id/lightButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/option_theme_light" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/compactToggleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/comfortableButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/option_compact_off" />

                <Button
                    android:id="@+id/autoCompactButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/option_compact_auto" />

                <Button
                    android:id="@+id/compactButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/option_compact_on" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/infoText" />

        </LinearLayout>

        <TextView
            android:id="@+id/lastRefreshedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="?attr/selectableItemBackground"
            android:drawableEnd="@drawable/ic_refresh"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/last_refreshed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:drawableTint="@color/titleText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coursesButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/menu_option_courses"
                android:textColor="@color/tabText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/credentialsButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/menu_option_credentials"
                android:textColor="@color/tabText" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/backgroundToggleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/backgroundOnButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxWidth="288dp"
                android:text="@string/option_background_on" />

            <Button
                android:id="@+id/backgroundOffButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/option_background_off" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manageAccountButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/menu_manage_account"
            android:textColor="@color/tabText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/feedbackButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/menu_feedback"
                android:textColor="@color/tabText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rateButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/menu_rate"
                android:textColor="@color/tabText" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@color/tabText" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>