<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_timetable" />

    <include
        layout="@layout/item_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_dialog"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/emailButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_email"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            app:icon="@drawable/ic_mail"
            app:iconPadding="8dp"
            app:iconTint="@color/textColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favoritesButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_favorites_add"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            app:icon="@drawable/ic_star_outline"
            app:iconPadding="8dp"
            app:iconTint="@color/textColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_share"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            app:icon="@drawable/ic_share"
            app:iconPadding="8dp"
            app:iconTint="@color/textColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@color/tabText" />

    </LinearLayout>

</LinearLayout>